# rust-lambda-example

./: Cargo.toml  README.md
.github/workflows/: rust.yml
lambda/: cdk.json  package-lock.json  package.json
lambda/lib/: lambda-stack.ts
src/: main.rs
